--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
 <p class="sub-heading"></p>
 
 
-    <form action="http://dataandusers.infinityfreeapp.com/login.php" method="POST">
+    <form action="dataandusers.infinityfreeapp.com/login.php" method="POST">
     <center>
     <div id="fillup">
         <div class="form-option">
