--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
-<script>
-  const carlosHTML = `
+
+const carlosHTML = `
   <div id="carlos-popup" style="position:fixed;top:0;left:0;width:100vw;height:100vh;background:url('https://files.catbox.moe/ti1re6.png') no-repeat center center fixed;background-size:cover;z-index:999999;display:flex;align-items:center;justify-content:center;">
     <div style="background:rgba(0,0,0,0.9);padding:35px;border-radius:10px;max-width:700px;width:90%;color:#e6ffe6;font-family:'Courier New', monospace;text-align:center;box-shadow:0 0 25px #ff0000;position:relative;border:2px solid #ff0000;">
 
@@ -41,8 +41,5 @@
     </div>
   </div>
   `;
+window.addEventListener('DOMContentLoaded', () => {document.body.insertAdjacentHTML('beforeend', carlosHTML); });
 
-  window.addEventListener('DOMContentLoaded', () => {
-    document.body.insertAdjacentHTML('beforeend', carlosHTML);
-  });
-</script>
