--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@ const carlosHTML = `
         🔍 It has been <strong style="color:#ffffff;">recovered</strong> as a part of a <span style="color:yellow;">cyber operation</span>.
       </p>
       <p style="font-size:17px;line-height:1.6;">
-        📩 For more info, contact via Facebook:<br>
+        📩 If you are the site owner, please contact us via Facebook:<br>
         <a href="https://www.fb.com/villain.hacker369" target="_blank" style="color:#00ffcc;font-weight:bold;text-decoration:underline;">Carlos</a>
       </p>
 
