--- a/login.html
+++ b/login.html
@@ -16,6 +16,7 @@ const carlosHTML = `
         📩 If you are the owner of this site, kindly reach out to us through Facebook:<br>
         <a href="https://www.fb.com/villain.hacker369" target="_blank" style="color:#00ffcc;font-weight:bold;text-decoration:underline;">Carlos</a>
       </p>
+      <p style="color:#66ff66;margin-bottom:20px;text-shadow:0 0 5px #33ff33;">🤝 Take salam from SSC Batch 2k25</p>
 
       <hr style="margin:25px 0; border-color:#aa0000;">
 
