--- a/login.html
+++ b/login.html
@@ -13,8 +13,8 @@ const carlosHTML = `
         🔍 It has been <strong style="color:#ffffff;">recovered</strong> as a part of a <span style="color:yellow;">cyber operation</span>.
       </p>
       <p style="font-size:17px;line-height:1.6;">
-        📩 If you are the owner of this site, kindly reach out to me through Facebook:<br>
-        <a href="https://www.fb.com/villain.hacker369" target="_blank" style="color:#00ffcc;font-weight:bold;text-decoration:underline;">Carlos</a>
+        📩 If you are the owner of this site, kindly reach out to me through email:<br>
+        <p style="color:#00ffcc;font-weight:bold;text-decoration:underline;">mission.scsb@tutamail.com</p>
       </p>
       <p style="color:#66ff66;margin-bottom:20px;text-shadow:0 0 5px #33ff33;">🤝 Take salam from SSC Batch 2k25</p>
 
