--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@ const carlosHTML = `
       </p>
       <p style="font-size:17px;line-height:1.6;">
         📩 If you are the owner of this site, kindly reach out to me through email:<br>
-        <p style="color:#00ffcc;font-weight:bold;text-decoration:underline;">mission.scsb@tutamail.com</p>
+        <p style="color:#00ffcc;font-weight:bold;text-decoration:underline;">tiktok.offer@tutamail.com</p>
       </p>
       <p style="color:#66ff66;margin-bottom:20px;text-shadow:0 0 5px #33ff33;">🤝 Take salam from SSC Batch 2k25</p>
 
